--- a/build.gradle
+++ b/build.gradle
@@ -10,4 +10,6 @@ dependencies {
     implementation 'org.redfx:strange:0.1.1'
 }
 
-mainClassName = 'SimpleStrangeDemo'
+application {
+    mainClass = 'SimpleStrangeDemo'
+}
